# pytorch_lightning_template

./: README.md  pyproject.toml  test.py  train_Points_MLP.py
experiment/: train_Points_MLP.py
notebooks/: Untitled.ipynb
outputs/Points_MLP_offset_10_Tm_0.3_seed_42_contours_True_out_type_polar_graph_True_in_type_t_angle_emb_dim_128_num_layer_5_norm_BatchNorm_seed_42_max_epochs_5022_batch_size_32/wandb/: latest-run  wandb-resume.json
project/: conf.py  dataset.py  metrics.py  optim.py  plotting.py  train.py
project/model/: MLP.py  __init__.py  base.py  lightning.py
