[tool.poetry]
name = "project"
version = "0.1.0"
description = "My personal lightning template."
authors = ["Kilian Haefeli <44493092+kilian888@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "project"}]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.0.1"
numpy = "^1.25.1"
lightning = "^2.0.4"
pydantic = "<2.0"
wandb = "^0.15.5"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
